--- a/shared-volumes-driver-setup/roles/driver-setup/defaults/main.yml
+++ b/shared-volumes-driver-setup/roles/driver-setup/defaults/main.yml
@@ -10,5 +10,5 @@ rx_buffer_size: 8192
 tx_buffer_size: 8192
 
 #GB200 support
-vastnfs_new_kernels: "4.5.0-rc3"
+vastnfs_new_kernels: "4.5.1"
 vastnfs_old_kernels: "4.0.35"
