quick fix on nccl tests

--- a/nccl-allreduce-test-vms/ips.yaml
+++ b/nccl-allreduce-test-vms/ips.yaml
@@ -1,5 +1,5 @@
-160.211.66.37
-160.211.66.4
-160.211.66.39
-160.211.66.48
-160.211.66.36
+160.xxx.xx.xx
+160.xxx.xx.xx
+160.xxx.xx.xx
+160.xxx.xx.xx
+160.xxx.xx.xx
