'Agent' should be capitalized

--- a/crusoe-watch-agent/setup-metrics.yaml
+++ b/crusoe-watch-agent/setup-metrics.yaml
@@ -3,7 +3,7 @@
 # Crusoe Watch Agent Installation Playbook
 # ============================================================================
 # This playbook automates the installation and configuration of the 
-# Crusoe Watch agent across a fleet of VMs.
+# Crusoe Watch Agent across a fleet of VMs.
 #
 # Requirements:
 #   - Ansible 2.9+
@@ -48,7 +48,7 @@
   # --------------------------------------------------------------------------
   tasks:
     # --- Download Setup Script ---
-    - name: Download Crusoe Watch agent setup script
+    - name: Download Crusoe Watch Agent setup script
       get_url:
         url: "{{ crusoe_watch_agent_script_url }}"
         dest: "{{ crusoe_watch_agent_script_path }}"
@@ -60,7 +60,7 @@
       until: download_result is succeeded
 
     # --- Check Existing Installation ---
-    - name: Check if Crusoe Watch agent service is running
+    - name: Check if Crusoe Watch Agent service is running
       command: systemctl is-active "{{ crusoe_watch_service_name }}"
       register: service_check
       changed_when: false
@@ -78,7 +78,7 @@
 
     - name: Display installation status
       debug:
-        msg: "{{ 'Crusoe-Watch agent already installed and running. Skipping installation steps.' if agent_already_installed else 'Crusoe-Watch agent not found. Proceeding with installation.' }}"
+        msg: "{{ 'Crusoe Watch Agent already installed and running. Skipping installation steps.' if agent_already_installed else 'Crusoe Watch Agent not found. Proceeding with installation.' }}"
 
     # --- Prepare Automated Installation ---
     - name: Ensure expect package is installed
@@ -135,7 +135,7 @@
       when: not agent_already_installed
 
     # --- Run Installation ---
-    - name: Run Crusoe Watch agent installation with monitoring token
+    - name: Run Crusoe Watch Agent installation with monitoring token
       command: "/tmp/install_crusoe_watch_agent.exp {{ crusoe_monitoring_token }}"
       register: installation_result
       when: not agent_already_installed
