--- a/crusoe-watch-agent/inventory.ini
+++ b/crusoe-watch-agent/inventory.ini
@@ -2,7 +2,7 @@
 # Crusoe Cloud GPU VMs Inventory
 
 [crusoe_vms]
-vm-1 ansible_host=204.52.22.40 ansible_user=ubuntu
+; vm-1 ansible_host=<IP> ansible_user=ubuntu
 ; vm-2 ansible_host=<IP> ansible_user=ubuntu
 ; vm-3 ansible_host=<IP> ansible_user=ubuntu
 
